# MonteCarloPathTracing

./: .gitignore  CMakeLists.txt  README.md  path_tracing.sln  run_scene01.bat  run_scene02.bat  run_scene_dog.bat  run_scene_table.bat  run_scene_vase.bat
config/: scene01.lua  scene02.lua  scene_dog.lua  scene_table.lua  scene_vase.lua
path_tracing/: path_tracing.vcxproj  path_tracing.vcxproj.filters
src/: AABB.cpp  AABB.h  AbstractObject.h  KdTree.cpp  KdTree.h  LuaConfigParser.cpp  LuaConfigParser.h  Main.cpp  Model.cpp  Model.h  PathTracer.cpp  PathTracer.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SceneConfigLoader.cpp  SceneConfigLoader.h  SceneViewer.cpp  SceneViewer.h  Types.h
